--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/fss/solis-inverter#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "jsdom": "^16.2.0"
+    "jsdom": "^16.2.0",
+    "yargs": "^15.1.0"
   }
 }
